# dinglehopper

./: .allowed-licenses  .coveragerc  .dockerignore  .drone.jsonnet  .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .vimrc  Dockerfile  LICENSE  MANIFEST.in  Makefile  README-DEV.md  README.md  extracted_text.py  extracted_text_test.py  generate-requirements.sh  ocrd-tool.json  py3.5-requirements.txt  py3.6-requirements.txt  py3.7-requirements.txt  py3.8-requirements.txt  py3.9-requirements.txt  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: release-check-version-tag  release.yml  test.yml  test_report.yml
.gitlab/: mirror.yml
dinglehopper/: __init__.py  cli.py  ocr_files.py  ocrd_cli.py
dinglehopper/notebooks/: Unicode normalization and Character segmentation.ipynb
dinglehopper/templates/: report.html.j2  report.html.js  report.json.j2
dinglehopper/tests/: test_integ_cli_dir.py  test_integ_edit_distance_ocr.py  test_integ_summarize.py  test_word_error_rate.py
dinglehopper/tests/data/bigger-texts/00008228/: 00008228.gt.xml
qurator/dinglehopper/: .gitignore  __init__.py  align.py  character_error_rate.py  cli.py  cli_extract.py  cli_line_dirs.py  config.py  edit_distance.py  extracted_text.py  flexible_character_accuracy.py  flexible_character_accuracy_ds.py  flexible_character_accuracy_ds_35.py  normalize.py  ocr_files.py  ocrd-tool.json  ocrd_cli.py  substitute_equivalences.py  word_error_rate.py
qurator/dinglehopper/metrics/: __init__.py  bag_of_chars_accuracy.py  bag_of_words_accuracy.py  character_accuracy.py  character_error_rate.py  utils.py  word_accuracy.py  word_error_rate.py
qurator/dinglehopper/notebooks/: Levenshtein.ipynb
qurator/dinglehopper/templates/: report.html.j2  report.html.js  report.json.j2
qurator/dinglehopper/tests/: extracted_text_test.py  test_align.py  test_character_error_rate.py  test_edit_distance.py  test_editops.py  test_flexible_character_accuracy.py  test_integ_align.py  test_integ_character_error_rate_ocr.py  test_integ_cli.py  test_integ_cli_valid_json.py  test_integ_edit_distance_ocr.py  test_integ_flexible_character_accuracy.py  test_integ_ocrd_cli.py  test_integ_table_extraction.py  test_integ_word_error_rate_ocr.py  test_ocr_files.py  test_word_error_rate.py  util.py
qurator/dinglehopper/tests/data/: levels-are-different.page.xml  order.page.xml  test.alto2.xml
qurator/dinglehopper/tests/data/actevedef_718448162/: mets.xml
qurator/dinglehopper/tests/data/actevedef_718448162/OCR-D-GT-PAGE/: 00000024.page.xml
qurator/dinglehopper/tests/data/brochrnx_73075507X/: 00000139.gt.page.xml
qurator/dinglehopper/tests/data/lorem-ipsum/: lorem-ipsum-scan.gt.page.xml  lorem-ipsum-scan.ocr.tesseract.alto.xml  lorem-ipsum.odt
qurator/dinglehopper/tests/data/table-order/: table-no-reading-order.xml  table-order-0001.xml
qurator/dinglehopper/tests/metrics/: test_bag_accuracy.py  test_character_accuracy.py  test_character_error_rate.py  test_integ_character_accuracy_ocr.py  test_integ_character_error_rate_ocr.py  test_integ_word_accuracy.py  test_integ_word_error_rate_ocr.py  test_word_accuracy.py  test_word_error_rate.py
src/dinglehopper/: __init__.py  align.py  character_error_rate.py  cli.py  cli_extract.py  cli_line_dirs.py  cli_summarize.py  edit_distance.py  extracted_text.py  line_dirs_test.py  ocr_files.py  ocrd-tool.json  ocrd_cli.py  word_error_rate.py
src/dinglehopper/line_dirs_test/basic/ocr/: a.some-ocr.txt
src/dinglehopper/notebooks/: Levenshtein.ipynb
src/dinglehopper/templates/: report.json.j2  summary.html.j2  summary.json.j2
src/dinglehopper/tests/: extracted_text_test.py  test_align.py  test_character_error_rate.py  test_edit_distance.py  test_integ_align.py  test_integ_bigger_texts.py  test_integ_character_error_rate_ocr.py  test_integ_cli_dir.py  test_integ_cli_line_dirs.py  test_integ_cli_valid_json.py  test_integ_cli_valid_report.py  test_integ_differences.py  test_integ_edit_distance_ocr.py  test_integ_empty_files.py  test_integ_ocrd_cli.py  test_integ_summarize.py  test_integ_word_error_rate_ocr.py  test_line_dirs.py  test_ocr_files.py  test_word_error_rate.py  util.py
src/dinglehopper/tests/data/: 00000119.tif  mixed-regions.page.xml  test.alto1.xml  test.alto2.xml  test.alto3.xml
src/dinglehopper/tests/data/actevedef_718448162/: mets.xml
src/dinglehopper/tests/data/actevedef_718448162/OCR-D-OCR-CALAMARI/: OCR-D-OCR-CALAMARI_0001.xml
src/dinglehopper/tests/data/actevedef_718448162/OCR-D-OCR-TESS/: OCR-D-OCR-TESS_0001.xml
src/dinglehopper/tests/data/bigger-texts/00008228/: 00008228-00236534.gt4hist.xml
src/dinglehopper/tests/data/brochrnx_73075507X/: 00000139.ocrd-tess.ocr.page.xml
src/dinglehopper/tests/data/directory-test/gt/: 2.xml
src/dinglehopper/tests/data/directory-test/ocr/: 2.xml
src/dinglehopper/tests/data/line_dirs/subdirs/gt/b/: b.gt.txt
src/dinglehopper/tests/data/line_dirs/subdirs/ocr/b/: b.some-ocr.txt
src/dinglehopper/tests/data/lorem-ipsum/: lorem-ipsum-scan-bad.ocr.tesseract.alto.xml
src/dinglehopper/tests/data/table-order/: table-order-0002.xml  table-region.xml  table-unordered.xml
src/dinglehopper/tests/data/unused-larex-indexed-textequiv-jkamlah/: OCR-D-GT_0008.xml  OCR-D-OCR-TESS_0008.xml
